--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://vadim-savchuk.github.io/myPortfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-gh-pages": "gh-pages -d build",
-    "deploy": "npm run build && npm run gh-pages"
+    "deploy": "npm run build && npm run build-gh-pages"
   },
   "eslintConfig": {
     "extends": [
